--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 
     <div class="city">
       <img class="nav-logo-upload" src="./images/upload-icon.svg" alt="">
-      <input class="input-box" type="text" id="input" value="Mumbai" />
+      <!-- <input class="" type="text" id="input" value="" /> -->
+      <div class="search">
+        <input id="input"  onclick="reveal()" type="text" placeholder="" autocomplete="off" />
+        <ul id="places">
+          <li><a href="#" class="dropDown">Kolkata</a></li>
+          <li><a href="#" class="dropDown">Mumbai</a></li>
+          <li><a href="#" class="dropDown">Banglore</a></li>
+          <li><a href="#" class="dropDown">Delhi</a></li>
+          <li><a href="#" class="dropDown">Noida</a></li>
+          <li><a href="#" class="dropDown">Patna</a></li>
+          <li><a href="#" class="dropDown">Jaipur</a></li>
+          <li><a href="#" class="dropDown">Hyderabad</a></li>
+        </ul>
+      </div>
       <img class="nav-logo nav-logo-upload " src="./images/menu.svg" alt="">
     </div>
 
